Bugfix display floats sensort axis

--- a/frontend_react/public/index.html
+++ b/frontend_react/public/index.html
@@ -33,7 +33,7 @@
     -->
     <title>Mouse Classifier</title>
   </head>
-  <body>
+  <body style="background-color: #35383a">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="react"></div>
     <!--
